--- a/zh-CN/open/jobs/1.md
+++ b/zh-CN/open/jobs/1.md
@@ -24,6 +24,7 @@ sidebar: auto
       3) 协程能保留上一次调用时的状态，每次过程重入时，就相当于进入上一次调用的状态
 
 ## TCP 的状态
+    ![tcp-status](/images/tcp-status.jpg)
     1、客户端独有的：（1）SYN_SENT （2）FIN_WAIT1 （3）FIN_WAIT2 （4）CLOSING （5）TIME_WAIT 。
     2、服务器独有的：（1）LISTEN （2）SYN_RCVD （3）CLOSE_WAIT （4）LAST_ACK 。
     3、共有的：（1）CLOSED （2）ESTABLISHED 。
