--- a/zh/bbhj/weekly-report/2019q2.md
+++ b/zh/bbhj/weekly-report/2019q2.md
@@ -1,16 +1,58 @@
-##本周目标##
+# Weekly Meeting 2019w16 (04.15 ~ 04.21)
 
-1. 首页添加广告栏显示，用户宣传小程序, 增加影响力。
+> **Time**: April 21, 2019
+<br>
+> **Moderator**: @dean
+<br>
+> **Notetaker**: @dean
+<br>
+> **Video/Slides**: https://youtu.be/JFWi5yebR88
+<br>
+> **Moderator checklist**:
 
-2. 收集 formid 用于做基于地理位置的推送失踪信息
+- 确定参会人数及时间
+- 是否需要视频或录屏
+- 会议议题及沟通事项
+- 提前准备工作计划
 
-3. 页面展示太难看了，需要修改。
+> **Attendees:**
+- @dean
+- @tbDuck
 
-4. wx storage 存储的信息，无法首次更新， 比如显示城市位置
+-----------------
+> **Agenda**
 
-##进度##
+> **Topic**: 5月 OKR 沟通
 
-  
-  
-##总结##
+> **Notes**:
+- 技术突破
+- 志愿者信息录入
+- 小程序使用场景
+  - 扫码进入
+  - 微信好友分享
+  - 微信群组分享
 
+
+> **Questions**:
+- **Q**: @dean, xxx 技术的优势有哪些?
+- **A**: 我也不知道，会后我了解一下。
+
+
+> **Comments**:
+- @dean 服务器资源紧急，我下周开始跟进。
+
+-----------------
+> **ToDo**:
+
+@dean:
+- [x] :bug: 真机生成图片，二维码异常问题
+- [x] :bug:  搜索支持档案编号babyid 数字搜索
+- [ ] :red_circle: 动态功能， 增加文章链接。 单个的item 的布局采用类似微信订阅号的样式
+- [ ] 动态页面显示腾讯视频功能。
+- [ ] 开发聊天室功能，类似于微信群聊天。
+- <del> [d] : 删除该项工作计划 </del>
+
+@tbDuck:
+
+- [x] :bug: 真机生成图片，二维码异常问题
+- [ ] :red_circle: 动态功能， 增加文章链接。 单个的item 的布局采用类似微信订阅号的样式
