add weekly report template

--- a/zh/bbhj/weekly-report/2019q2.md
+++ b/zh/bbhj/weekly-report/2019q2.md
@@ -22,7 +22,7 @@
 -----------------
 > **Agenda**
 
-> **Topic**: 5月 OKR 沟通
+> **Topic**: 下周工作
 
 > **Notes**:
 - 技术突破
@@ -34,8 +34,8 @@
 
 
 > **Questions**:
-- **Q**: @dean, xxx 技术的优势有哪些?
-- **A**: 我也不知道，会后我了解一下。
+- **Q**: @dean, 为什么用 mpvue, 不用 wepy 呢？
+- **A**: 因为 mpvue 使用成本小，且当前已经支持各类小程序。对于我们来讲，是比较简单的
 
 
 > **Comments**:
@@ -45,14 +45,20 @@
 > **ToDo**:
 
 @dean:
-- [x] :bug: 真机生成图片，二维码异常问题
-- [x] :bug:  搜索支持档案编号babyid 数字搜索
-- [ ] :red_circle: 动态功能， 增加文章链接。 单个的item 的布局采用类似微信订阅号的样式
-- [ ] 动态页面显示腾讯视频功能。
-- [ ] 开发聊天室功能，类似于微信群聊天。
-- <del> [d] : 删除该项工作计划 </del>
+- [ ] createqrcode 获取小程序二维码接口支持参数。
+- <del> [d] : 救助站信息录入 </del>
 
 @tbDuck:
 
-- [x] :bug: 真机生成图片，二维码异常问题
-- [ ] :red_circle: 动态功能， 增加文章链接。 单个的item 的布局采用类似微信订阅号的样式
+- [ ] 用户手机号码获取，使用 button 组件 [getPhoneNumber](https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/getPhoneNumber.html)
+- [ ] 用户收件地址获取，使用 api 接口 [wx.chooseAddress](https://developers.weixin.qq.com/miniprogram/dev/api/wx.chooseAddress.html)
+- [ ] 用户信息灰色进行提示，文本框支持编辑功能
+- [ ] 志愿者信息录入逻辑实现
+
+@Newbg:
+
+- [ ] 客服页面布局设计
+
+@xi4oyi:
+
+- [ ] 周会模板制定
