--- a/en/labs-college/courses/lc1001.md
+++ b/en/labs-college/courses/lc1001.md
@@ -1,7 +1,7 @@
-LC1001
+LC1001 - How to user git
 
 | ID            | LC1001       |
-| --------      | -----        |
+| :--------     | :-----       |
 | Name          | How to       |
 | Instructor    | Dean         |
 | Length        | 1.5 Hours    |
