--- a/en/labs-college/courses/lc1002.md
+++ b/en/labs-college/courses/lc1002.md
@@ -22,6 +22,7 @@ xxxxxx
 
 # Reading Materials
 [Building an API Gateway with Lua and Nginx](https://yos.io/2016/01/28/building-an-api-gateway-with-lua-and-nginx/)
-
+[ipip](https://github.com/ipipdotnet/ipdb-luajit)
+[Lua Tutorial](https://www.tutorialspoint.com/lua/)
 
 # Video
