update courses overview

--- a/en/labs-college/courses/lc1001.md
+++ b/en/labs-college/courses/lc1001.md
@@ -1,4 +1,4 @@
-LC1001 - How to user git
+# LC1001 - How to use git
 
 | ID            | LC1001       |
 | :--------     | :-----       |
@@ -8,17 +8,17 @@ LC1001 - How to user git
 | Level         | Introductory |
 
 
-# Introduction
+## Introduction
 xxxxxx
 
-# Knowledge Points
+## Knowledge Points
 
-# Prerequisites
+## Prerequisites
 
-# Target Audience
+## Target Audience
 
-# Slides
+## Slides
 
-# Reading Materials
+## Reading Materials
 
-# Video
+## Video
