--- a/en/labs-college/courses/lc1002.md
+++ b/en/labs-college/courses/lc1002.md
@@ -1,4 +1,4 @@
-LC1001 - Building an API Gateway with OpenResty
+# LC1002 - API Gateway
 
 | ID            | LC1002       |
 | :--------     | :-----       |
@@ -8,21 +8,21 @@ LC1001 - Building an API Gateway with OpenResty
 | Level         | Introductory |
 
 
-# Introduction
+## Introduction
 xxxxxx
 
-# Knowledge Points
+## Knowledge Points
 
-# Prerequisites
+## Prerequisites
 [OpenResty Installation](https://openresty.org/en/linux-packages.html)
 
-# Target Audience
+## Target Audience
 
-# Slides
+## Slides
 
-# Reading Materials
-[Building an API Gateway with Lua and Nginx](https://yos.io/2016/01/28/building-an-api-gateway-with-lua-and-nginx/)
-[ipip](https://github.com/ipipdotnet/ipdb-luajit)
-[Lua Tutorial](https://www.tutorialspoint.com/lua/)
+## Reading Materials
+- [Building an API Gateway with Lua and Nginx](https://yos.io/2016/01/28/building-an-api-gateway-with-lua-and-nginx/)
+- [ipip](https://github.com/ipipdotnet/ipdb-luajit)
+- [Lua Tutorial](https://www.tutorialspoint.com/lua/)
 
-# Video
+## Video
