--- a/en/labs-college/courses/sre1001.md
+++ b/en/labs-college/courses/sre1001.md
@@ -1,9 +1,9 @@
-# LC1001 - Name Service
+# SRE1001 - How to use git
 
-| ID            | LC1002       |
+| ID            | LC1001       |
 | :--------     | :-----       |
-| Name          | Name Service |
-| Instructor    | Init         |
+| Name          | How to       |
+| Instructor    | Dean         |
 | Length        | 1.5 Hours    |
 | Level         | Introductory |
 
@@ -20,6 +20,5 @@ xxxxxx
 ## Slides
 
 ## Reading Materials
-[Name Service Switch](https://www.gnu.org/software/libc/manual/html_node/Name-Service-Switch.html)
 
 ## Video
