update courses overview

--- a/en/labs-college/courses/st1001.md
+++ b/en/labs-college/courses/st1001.md
@@ -1,8 +1,8 @@
 # ST1001 - Entry Test
 
-| ID            | ST1001                           |
+| ID            | ST1001                          |
 | :--------     | :-----                          |
-| Category      | Stack Test
+| Category      | Stack Test                      |
 | Name          | Linux System Administrator      |
 | Instructor    | -                               | 
 | Length        | 5 working days                  |
@@ -27,14 +27,13 @@ Target as follow:
 5. Troubleshooting
 
 ## Deliverables
-1. `Vagranfile` which can startup a Linux OS via VirtalBox.
+1. `Vagranfile` which can startup a Linux OS by docker.
 2. `init.sh` which can initialize OS, like install package and run a nginx service.
 3. Online Toubleshooting Test(30 minutes).
 
 ## Agenda
 - Day1: 
-    - Install [VirtualBox](https://www.virtualbox.org/) and Create a vm, then install os to the vm
-    - Use [Vagrant](https://www.vagrantup.com/intro/getting-started/index.html) to manage `VirtualBox`
+    - Manage local [docker](https://hub.docker.com/?overlay=onboarding) environment via [Vagrant](https://www.vagrantup.com/intro/getting-started/index.html) 
 - Day2:
     - Use `Vagrant` provision shell to auto execute scripts
     - Shell scripting
