add dev2001 build a deb package

--- a/en/labs-college/courses/dev1001.md
+++ b/en/labs-college/courses/dev1001.md
@@ -1,6 +1,6 @@
 # DEV1001 - Sign in with Google
 
-| ID            | LC1001                   |
+| ID            | DEV1001                  |
 | :--------     | :-----                   |
 | Category      | Authorization            |
 | Name          | Sign in with Google      |
